name:          map-db-mu-graphql
version:       0.3.0.0
synopsis:
description:
author:        Mike Thomas
maintainer:    
copyright:     
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    map.graphql
homepage:
bug-reports:   

executable map
  hs-source-dirs:   src
  main-is:          Server.hs
  other-modules:    Schema
  default-language: Haskell2010
  build-depends:
      base                 >=4.12    && <5
    , conduit              >=1.3.2   && <2
    , monad-logger         >=0.3     && <0.4
    , mtl                  >=0.2
    , mu-graphql           >=0.4.1   && <0.6
    , mu-persistent        >=0.3.1   && <0.4
    , mu-prometheus        >=0.4     && <0.6
    , mu-rpc               >=0.4.0.1 && <0.6
    , mu-schema            >=0.3.1.1 && <0.4
    , persistent           >=2.10    && <3
    , persistent-sqlite    >=2.10    && <3
    , persistent-template  >=2.8     && <3
    , text                 >=1.2     && <2
    , wai-extra            >=3       && <4
    , warp                 >=3.3     && <4
